// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PageHeader centered renders correctly 1`] = `
<DocumentFragment>
  <header
    class="medium-hero"
  >
    <div
      class="pg-header-hero-black"
    >
      <div
        class="container has-text-centered"
      >
        <h1
          class="pg-header-title"
        >
          Starter
          <span
            class="pg-header-period"
          >
            .
          </span>
        </h1>
      </div>
    </div>
  </header>
</DocumentFragment>
`;

exports[`PageHeader default renders correctly 1`] = `
<DocumentFragment>
  <header
    class="medium-hero"
  >
    <div
      class="pg-header-hero-black"
    >
      <div
        class="container "
      >
        <h1
          class="pg-header-title"
        >
          Starter
          <span
            class="pg-header-period"
          >
            .
          </span>
        </h1>
      </div>
    </div>
  </header>
</DocumentFragment>
`;
